#[package]
#name = "rustlearn"
#version = "0.1.0"
#edition = "2021"
#
## See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#
#[dependencies]

[workspace]
members=["actix_web_demo",
    "rust-micro",
    "rust-learn",
    "rust_macro_learn",
    "rocket_web_learn",
    "axum_web",
]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

