[package]
name = "actix_web_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
dotenvy = "0.15.7"
chrono = { version = "0.4.23", features = ["serde"] }
sqlx-cli = "0.6.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust_decimal = "1.28.0"
sqlx = { version = "0.6", features = [
    "runtime-tokio-native-tls",
    "mysql",
    "chrono",
    "json",
    "macros",
    "decimal"
] }
postgres = "0.19.4"
mobc-redis = "0.8.0"
mobc = "0.8.1"
anyhow = "1.0.70"
