[package]
name = "bean_check"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro=true
[dependencies]
regex = "1"
md-5 = "0.10.5"
syn={ version = "1.0", features = ["full","extra-traits"] }
quote="1.0"
proc-macro2="1.0.56"